@@ -192,15 +192,17 @@ Synapter(filenames, master) ## creates an instance of class 'Synapter'
 \arguments{
   \item{filenames}{A named \code{list} of file names to be load. The
     names must be 'identpeptide', 'quantpeptide', 'quantpep3d' and 'fasta'
-    (could be an RDS file created by \code{link{createUniquePeptideDbRds}}).
-    If missing, dialog boxes pop up to select the four files
+    (could be an RDS file created by \code{link{createUniquePeptideDbRds}})
+    and (optional 'identfragments' and 'quantspectra').
+    If missing, dialog boxes pop up to select the six files
     manually.
     \code{identpeptide} can be a \code{csv} final peptide file (from
     PLGS) or a saved \code{"\linkS4class{MasterPeptides}"} data object as
     created by \code{\link{makeMaster}} if working with \emph{master}
     peptide data. To serialise the \code{"\linkS4class{MasterPeptides}"}
     instance, use the \code{saveRDS} function, and file extenstion
-    \code{rds}.
+    \code{rds}. This master file could contain a fragment library as well. In
+    this case the 'identfragments' argument would be ignored.
   }
   \item{master}{A \code{logical} that defines if the identification file
     is a \emph{master} file. See \code{\link{makeMaster}} for details
@@ -219,17 +221,20 @@ Synapter(filenames, master) ## creates an instance of class 'Synapter'
   \subsection{Loading the data}{
     The construction of the data and analysis container, technically
     defined as an instance or object of class \code{Synapter}, is created
-    with the \code{Synapter} constructor. This function opens four dialog
+    with the \code{Synapter} constructor. This function opens six dialog
     boxes for the user to point to the input files,
     namely (and in that order), the identification final peptide csv file, the
-    quantitation final peptide  csv file and the quantitation Pep3D csv file (as exported
-    from the PLGS software) and the fasta file use for peptide
-    identification. The latter could be an RDS file generated by
+    quantitation final peptide  csv file, the quantitation Pep3D csv file
+    (as exported from the PLGS software), the fasta file use for peptide
+    identification, the identification fragments csv file and the quantitation
+    spectra xml file. You can choose 'cancel' to ignore the last two files and
+    to skip the fragment matching later.
+    The fasta file ('fasta') could be an RDS file generated by
     \code{link{createUniquePeptideDbRds}}, too.
     The files are read and the data is stored in the newly
     created \code{Synapter} instance. The file names can also be
-    specified as a named list with names 'identpeptide', 'quantpeptide'
-    and 'quantpep3d' respectively.
+    specified as a named list with names 'identpeptide', 'quantpeptide',
+    'quantpep3d', 'identfragments' and 'quantspectra' respectively.
 
     The final peptide files are filtered
     to retain peptides with \code{matchType} corresponding to
@@ -520,9 +525,10 @@ Synapter(filenames, master) ## creates an instance of class 'Synapter'
       }
 
       \item{inputFiles}{\code{signature(object="Synapter")}: Returns a
-	\code{character} of length 4 with the names of the input files
+	\code{character} of length 6 with the names of the input files
 	used as \code{identpeptide}, \code{quantpeptide},
-	\code{quantpep3d} and \code{fasta}.
+	\code{quantpep3d}, \code{fasta}, \code{identfragments} and
+  \code{quantspectra}.
       }
 
       \item{getLog}{\code{signature(object="Synapter")}: Returns a
