@@ -56,6 +56,8 @@ CHANGES IN VERSION 1.99.0
    [2014-11-24 Mon]
  o remove unused internal functions: filterCommonSeq, filterKeepUniqueSeq,
    filterKeepUniqueProt [2014-11-27 Thu]
+ o loading identification fragments and quantitation spectra via Synapter
+   constructor [2014-12-07 Sun]
 
 CHANGES IN VERSION 1.7.0
 ------------------------
